--- a/web/login.html
+++ b/web/login.html
@@ -69,7 +69,7 @@
                     alert("账号密码错误");
                     location.reload()
                 }else{
-                    window.location.href="home.html";
+                    window.location.href="webpage/home.html";
                 }
 
             },"json"
